INCLUDES = -I$(top_srcdir)/src $(all_includes)
METASOURCES = AUTO

noinst_LTLIBRARIES = libproglistui.la libproglistnoui.la
libproglistui_la_LDFLAGS = $(all_libraries)
libproglistui_la_SOURCES = prog_list.cpp prog_list_ui.cpp
libproglistnoui_la_LDFLAGS = $(all_libraries)
libproglistnoui_la_SOURCES = prog_list.cpp prog_list_noui.cpp
