INCLUDES = -I$(top_srcdir)/src $(all_includes)
METASOURCES = AUTO


noinst_LTLIBRARIES = libdevicelistnoui.la libdevicelistui.la

libdevicelistnoui_la_LDFLAGS = $(all_libraries)
libdevicelistnoui_la_SOURCES = device_list.cpp device_list_noui.cpp

libdevicelistui_la_LDFLAGS = $(all_libraries)
libdevicelistui_la_SOURCES = device_list.cpp device_list_ui.cpp
