blink12dir = ${prefix}/share/usbpicprog/examples/blinking_led_12F_16F/
blink12_DATA = blink_12F609.hex \
blink_12F615.hex \
blink_12F629.hex \
blink_12F635.hex \
blink_12F675.hex \
blink_12F683.hex \
blink_16F610.hex \
blink_16F616.hex \
blink_16F627A.hex \
blink_16F627.hex \
blink_16F628A.hex \
blink_16F628.hex \
blink_16F630.hex \
blink_16F631.hex \
blink_16F636.hex \
blink_16F639.hex \
blink_16F648A.hex \
blink_16F676.hex \
blink_16F677.hex \
blink_16F684.hex \
blink_16F685.hex \
blink_16F687.hex \
blink_16F688.hex \
blink_16F689.hex \
blink_16F690.hex \
blink_16F716.hex \
blink_16F72.hex \
blink_16F737.hex \
blink_16F73.hex \
blink_16F747.hex \
blink_16F74.hex \
blink_16F767.hex \
blink_16F777.hex \
blink.c \
blink.piklab

EXTRA_DIST = $(blink12_DATA)

