INCLUDES = -I$(top_srcdir)/src $(all_includes)
METASOURCES = AUTO
libpicui_la_LDFLAGS = $(all_libraries)
noinst_LTLIBRARIES = libpicui.la


libpicui_la_SOURCES = pic_config_editor.cpp \
		pic_config_word_editor.cpp	pic_hex_view.cpp pic_memory_editor.cpp pic_register_view.cpp pic_group_ui.cpp \
	pic_prog_group_ui.cpp
